# FileScan

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Scaner.h
include/composite/: Component.h  File.h  Folder.h
src/: Scaner.cpp
src/composite/: Component.cpp  File.cpp  Folder.cpp
